# demservice

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
include/: band_reader.hpp  dem_priv.hpp  dem_server.hpp  height_reader.hpp  raster_band.hpp  raster_dataset.hpp  spatial_reference.hpp  transformation.hpp
proto/: dem_service.grpc.pb.cc  dem_service.grpc.pb.h  dem_service.pb.cc  dem_service.pb.h  dem_service.proto  helloworld.grpc.pb.h  helloworld.pb.h
src/: CMakeLists.txt  band_reader.cc  client.cc  dem_server.cc  dem_service.cc  height_reader.cc  raster_band.cc  raster_dataset.cc  service.cc  spatial_reference.cc  transformation.cc
test/: CMakeLists.txt  raster_dataset_test.cc
